--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -1504,6 +1504,9 @@ i:before {
 ============================================================================================ */
 /* Contact Success and error Area css
 ============================================================================================ */
+.modal-content{
+  min-width:400px;
+}
 .modal-message .modal-dialog {
   position: absolute;
   top: 36%;
@@ -1512,7 +1515,7 @@ i:before {
   -ms-transform: translateX(-50%) translateY(-50%) !important;
   transform: translateX(-50%) translateY(-50%) !important;
   margin: 0px;
-  max-width: 500px;
+  max-width: 800px;
   width: 100%;
 }
 
